--- a/FrontEnd/echooling/src/Components/CaruselSliderSlick/caruselSlider.module.css
+++ b/FrontEnd/echooling/src/Components/CaruselSliderSlick/caruselSlider.module.css
@@ -1,10 +1,20 @@
 .CustomSlider{
     width: 100%;
-    margin: 0 auto;
-    padding: 0px;
+    margin: 0 ;
 }
 .customSlide {
     width: 100%;
     height: 240px;
-    
+    margin: 0 ;
+  }
+  .about{
+    text-align: center;
+    color: #3270fc;
+    font-weight: 700;
+    font-size: 50px;
+    padding: 20px 0; 
+  }
+  .SliderConatiner{
+    padding: 90px 0; 
+    height: max-content;
   }
