--- a/FrontEnd/echooling/src/Components/CourseCard/CourseCard.module.css
+++ b/FrontEnd/echooling/src/Components/CourseCard/CourseCard.module.css
@@ -1,5 +1,66 @@
-.MainContainer{
-    background-color: #F5F5F5;
+.MainContainer {
+    background-color: white;
+    width: 250px;
+    height: max-content;
+    border-radius: 10px;
+    padding-bottom: 5px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+.down{
+    padding: 5px;
+}
+.ImageContainer {
+    position: relative; /* Positioning context for absolute positioning */
     width: 100%;
-    height: 500px;
+    height: 130px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    overflow: hidden;
+}
+
+.Image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Maintain aspect ratio and cover container */
+    border: 1px solid #d1d7dc;
+}
+
+.Category {
+    position: absolute;
+    top: 15%;
+    left: 80%;
+    transform: translate(-50%, -50%); /* Center the text */
+    background-color: #3270fc; /* Add a semi-transparent background */
+    color: white;
+    padding: 2px 4px;
+    border-radius: 4px;
+    border: 1px solid #3270fc;
+    font-size: 11px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+.CreatedBy{
+    font-size: 17px;
+    color: #6a6f73;
+}
+.text{
+    font-weight:  700;
+    color: #2d2f31;
+    line-height: 20px;
+}
+.CoursePrice{
+    font-size: 15px;
+    font-weight: 700;
+    padding-right: 5px;
+}
+.image{
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+}
+.CreateContainer{
+    display: flex;
+    align-items: center;
+    gap: 10PX;
+    padding: 10px 0;
 }
