--- a/FrontEnd/echooling/src/Components/AboutUsSection/AboutUsSection.module.css
+++ b/FrontEnd/echooling/src/Components/AboutUsSection/AboutUsSection.module.css
@@ -10,39 +10,39 @@
     left: 100px;
 }
 .bakcgoundItem1{
-    position: absolute;
+    position: relative;
     z-index: 2;
     left: 55px;
     animation: BlueBakgound 7000ms linear infinite alternate-reverse 1000ms;
 }
 .bakcgoundItem2{
-    position: absolute;
+    position: relative;
     z-index: 2;
     top: 90px;
     left: 616px;
     animation: redBakgound 7000ms linear infinite alternate-reverse;
 }
 .bakcgoundItem3{
-    position: absolute;
-    top: 266px;
+    position: relative;
+    top: -235px;
     left: 259px;
     width: 387px;
 }
 .bakcgoundItem4{
-    top: 10px;
+    top: -329px;
     left: 150px;
     position: relative;
     z-index: -2;
 }
 @keyframes redBakgound {
-    0% { top: 230px;}
-    50% {top:380px}
-    100%{ top: 230px;}
+    0% { top: -230px;}
+    50% {top:-380px}
+    100%{ top: -230px;}
 }
 @keyframes BlueBakgound {
-    0% { top: 230px;}
-    50% {top:333px}
-    100%{ top: 233px;}
+    0% { top: -230px;}
+    50% {top:-333px}
+    100%{ top: -233px;}
 }
 .MainContainer{
     width: 100%;
@@ -55,6 +55,7 @@
 .LeftSideContainer{
     width: 800px;
     height: max-content;
+    
 }
 .Check{
     margin-right: 10px;
@@ -97,9 +98,8 @@
         left: 450px;
     }
     .bakcgoundItem3{
-        position: absolute;
-        top: 250px;
-        left: 120px;
+        top: -250px;
+        left: 95px;
     }
     .bakcgoundItem4{
         left: 10px;
@@ -114,14 +114,14 @@
         left: 50px;
     }
     @keyframes BlueBakgound {
-        0% { top: 130px;}
-        50% {top:233px}
-        100%{ top: 133px;}
+        0% { top: -180px;}
+        50% {top:-233px}
+        100%{ top: -183px;}
     }
     @keyframes redBakgound {
-        0% { top: 130px;}
-        50% {top:280px}
-        100%{ top: 130px;}
+        0% { top:- 180px;}
+        50% {top:-210px}
+        100%{ top:- 180px;}
     }
     .bakcgoundItem1{
         left: 0px;
@@ -130,13 +130,14 @@
         left: 250px;
     }
     .bakcgoundItem3{
-        top: 224px;
-        left: 127px;
-        width: 200px;
+        height: 137px;
+        top: -224px;
+        left: 108px;
+        width: 226px;
     }
     .bakcgoundItem4{
         left: 10px;
-        top: 20px;
+        top: -20px;
     }
     .LeftSideContainer{
         width: 360px;
@@ -144,76 +145,46 @@
 }
 @media (max-width:734px) {
     .BackgroundVideoContainer{
-        width: 255px !important; 
-        left: 50px;
+        width: 365px !important;
+        left: 0px;
+    }
+    @keyframes redBakgound {
+        0% { top:- 180px;}
+        50% {top:-280px}
+        100%{ top:- 180px;}
     }
     .bakcgoundItem1{
-        left: 50px;
+        left: -20px;
     }
     .bakcgoundItem2{
-        left: 150px;
+        left: 280px;
+        top:-200px
     }
     .bakcgoundItem3{
-        top: 220px;
-        left: 20px;
-        width: 200px;
+        top: -224px;
+        width: 338px;
+        left: 0;
     }
     .bakcgoundItem4{
         left: 10px;
-        top: 20px;
+        top: -284px;
     }
     .LeftSideContainer{
         width: 360px;
+            height: 243px;
     }
     .MainContainer{
         width: 100%;
         height: max-content;
         display: flex;
         flex-direction: column;
-        padding: 100px 0;
         align-items: center;
-        gap: 30px ;
-    }
-}
-@media (max-width:734px) {
-    .BackgroundVideoContainer{
-        width: 355px !important; 
-        left: 0px;
-    }
-    .bakcgoundItem1{
-        left: -40px;
-    }
-    .bakcgoundItem2{
-        left: 300px;
-    }
-    .bakcgoundItem3{
-        top: 192px;
-        width: 312px;
-        z-index: -9;
-    }
-    .bakcgoundItem4{
-           left: 0px;
-        top: 20px;
-    }
-    .LeftSideContainer{
-        width: 360px;
-    }
-    .title1{
-        font-size: 34px;
-    }
-    .title2{
-        color: #3270fc;
-        font-size: 34px;
-    }
-    .title3{
-        font-size: 18px;
+        padding: 20px 0;
+        align-items: center;
+        gap: 20px;
     }
     .rightSideContainer{
-        width: 320px;
+        width: 330px;
     }
-    @keyframes BlueBakgound {
-        0% { top: 130px;}
-        50% {top:233px}
-        100%{ top: 133px;}
-    }
+    
 }
