--- a/FrontEnd/echooling/src/Components/Header/Header.module.css
+++ b/FrontEnd/echooling/src/Components/Header/Header.module.css
@@ -3,7 +3,7 @@
   width: 100%;
   backdrop-filter: blur(5px);
   box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
-  position: fixed;
+  position: sticky;
   z-index: 3;
   top: 0;
   background-color: rgba(255, 255, 255, 0.9);
