--- a/FrontEnd/echooling/src/Components/AboutUsSection/AboutUsSection.module.css
+++ b/FrontEnd/echooling/src/Components/AboutUsSection/AboutUsSection.module.css
@@ -48,7 +48,8 @@
     width: 100%;
     height: 500px;
     display: flex;
-    padding: 150px 0;
+    padding: 1
+    50px 0;
     justify-content: center;
     margin-top: 100px !important;
 }
@@ -57,6 +58,7 @@
     height: max-content;
     
 }
+
 .Check{
     margin-right: 10px;
     position: relative;
