--- a/FrontEnd/echooling/src/Components/Slider/Slider.module.css
+++ b/FrontEnd/echooling/src/Components/Slider/Slider.module.css
@@ -1,5 +1,38 @@
-.MainContainer{
+/* Slider.module.css */
+.SliderContainer {
+    position: relative;
     width: 100%;
-    height: 500px;
-    background-color: red;
-}
+    max-height: 800px;
+    overflow: hidden;
+  }
+  
+  .CustomSlider {
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+  }
+  
+  .customSlide {
+    width: 100%;
+    height: 800px;
+  }
+  
+  .CustomButtonContainer {
+    justify-content: space-between;
+    display: flex;
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    z-index: 10;
+  }
+  
+  .CustomButton {
+    padding: 20px 20px;
+    background-color: rgb(0, 0, 0,0.1); /* Make sure to set the background color */
+    color: white;
+    border: none;
+    cursor: pointer;
+    width: auto;
+    z-index: 10;
+  }
+  
