--- a/FrontEnd/echooling/src/Components/Slider/Slider.module.css
+++ b/FrontEnd/echooling/src/Components/Slider/Slider.module.css
@@ -4,8 +4,22 @@
     width: 100%;
     max-height: 800px;
     overflow: hidden;
+
   }
   
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+  
+  /* Apply the animation to the slide text */
+  .fadeInAnimation {
+    animation: fadeIn 1s ease-in-out; /* Adjust duration and timing function as needed */
+  }
   .CustomSlider {
     width: 100%;
     height: 100%;
@@ -13,6 +27,7 @@
   }
   
   .customSlide {
+    filter: brightness(70%);
     width: 100%;
     height: 800px;
   }
@@ -27,12 +42,109 @@
   }
   
   .CustomButton {
-    padding: 20px 20px;
-    background-color: rgb(0, 0, 0,0.1); /* Make sure to set the background color */
+    padding: 20px 20px !important;
+    background-color: rgb(0, 0, 0,0.1) !important; 
     color: white;
     border: none;
     cursor: pointer;
     width: auto;
     z-index: 10;
   }
-  
+  .TextContainer{
+    width: 100%;
+    height: 300px;
+    z-index: 1;
+    position: absolute;
+    top: 30%;
+    line-height: 70px;
+    padding-left: 100px;
+  }
+  .MainTitle{
+    font-size: 60px;
+    font-weight: 700;
+    color: white;
+
+  }
+  .SeccondTitle{
+    font-size: 67px;
+    font-weight: 700;
+    color: white;
+  }
+  .Desctiption{
+    font-size: 16px;
+    font-weight: 600;
+    width: 700px;
+    line-height: 20px;
+    color: white;
+    padding: 20px 0;
+  }
+  .Button{
+    background-color: #3270fc !important;
+    color: white !important;
+    text-transform: uppercase;
+    font-weight: 600;
+  }
+  @media (max-width:1366px) {
+    .customSlide {
+      height: 600px !important;
+    }
+    .SliderContainer {
+      max-height: 600px !important;
+    }
+  }
+  @media (max-width:1025px) {
+    .customSlide {
+      height: 500px !important;
+    }
+    .SliderContainer {
+      max-height: 500px !important;
+    }
+    .TextContainer{
+      padding-left: 50px;
+    }
+  }
+  @media (max-width:480px) {
+    .customSlide {
+      height: 300px !important;
+    }
+    .SliderContainer {
+      max-height: 300px !important;
+      object-fit: none;
+
+    }
+    .CustomButton {
+      display: none !important;
+    }
+    .TextContainer{
+      width: 100%;
+      height: 200px;
+      z-index: 1;
+      position: absolute;
+      top: 10%;
+      line-height: 36px;
+      padding-left: 30px;
+    }
+    .MainTitle{
+      font-size: 30px;
+      font-weight: 700;
+      color: white;
+    }
+    .SeccondTitle{
+      font-size: 37px;
+      font-weight: 700;
+      color: white;
+    }
+    .Desctiption{
+      font-size: 16px;
+      width: 300px;
+      line-height: 20px;
+      color: white;
+      padding: 20px 0;
+    }
+    .Button{
+      background-color: #3270fc !important;
+      color: white !important;
+      text-transform: uppercase;
+      font-weight: 600;
+    }
+  }
