--- a/FrontEnd/echooling/src/Components/EventCard/EventCard.module.css
+++ b/FrontEnd/echooling/src/Components/EventCard/EventCard.module.css
@@ -19,23 +19,31 @@
     height: max-content;
     transition: 300ms;
     cursor: pointer;
+    padding-top: 10px;
 }
 .EventCard:hover{
    transform: scale(1.05);
-
+}
+.Main{
+    max-width: 386px;
+    height: max-content;
+    transition: 300ms;
+    cursor: pointer;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 .date{
     line-height: 25px;
 }
 .EventDetail{
     padding-left: 20px;
-    color: white;
     font-weight: 500;
+    font-size: 17px;
 }
 .DownCOntainer{
     display: flex;
     flex-direction: column;
-    padding: 20px 0;
+    padding: 20px 10px;
+    color: white;
 }
 .InfoContainer{
     display: flex;
@@ -50,13 +58,11 @@
 }
 .Info2{
     padding-left: 20px;
-    color: white;
-    font-weight: 300;
+    font-weight: 400;
     padding-left:15px ;
 }
 .Info3{
     padding-left: 20px;
-    color: white;
-    font-weight: 300;
+    font-weight: 400;
     padding-left:15px ;
 }
