--- a/FrontEnd/echooling/src/Components/EventCard/EventCard.module.css
+++ b/FrontEnd/echooling/src/Components/EventCard/EventCard.module.css
@@ -1,68 +1,71 @@
-.Down{
-    display: flex;
+.Down {
+  display: flex;
 }
-.day{
-    font-size: 29px;
-    font-weight: 600;
+.day {
+  font-size: 29px;
+  font-weight: 600;
 }
-.monunt{
-    font-size: 18px;
-    font-weight: 400;
-    text-transform: uppercase;
+.monunt {
+  font-size: 18px;
+  font-weight: 400;
+  text-transform: uppercase;
 }
-.Up{
-    max-width: 100%;
-    height: 100%;
+.Up {
+  max-width: 100%;
+  height: 100%;
 }
-.EventCard{
-    max-width: 356px;
-    height: max-content;
-    transition: 300ms;
-    cursor: pointer;
-    padding-top: 10px;
+.EventCard {
+  width: 276px ;
+  height: max-content;
+  transition: 300ms;
+  cursor: pointer;
+  padding-top: 10px;
 }
-.EventCard:hover{
-   transform: scale(1.05);
+.EventCard:hover {
+  transform: scale(1.05);
 }
-.Main{
-    max-width: 386px;
-    height: max-content;
-    transition: 300ms;
-    cursor: pointer;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+.Main {
+  max-width: 268px;
+  height: max-content;
+  transition: 300ms;
+  cursor: pointer;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
-.date{
-    line-height: 25px;
+.date {
+  line-height: 25px;
 }
-.EventDetail{
-    padding-left: 20px;
-    font-weight: 500;
-    font-size: 17px;
+.EventDetail {
+  padding-left: 20px;
+  font-weight: 500;
+  font-size: 17px;
 }
-.DownCOntainer{
-    display: flex;
-    flex-direction: column;
-    padding: 20px 10px;
-    color: white;
+.DownCOntainer {
+  display: flex;
+  flex-direction: column;
+  padding: 20px 10px;
+  color: white;
 }
-.InfoContainer{
-    display: flex;
-    padding: 30px 0 ;
-    align-items: center;
-    justify-content: space-between;
+.InfoContainer {
+  display: flex;
+  padding: 30px 0;
+  align-items: center;
+  justify-content: space-between;
 }
-.Info1{
-    width: 35px;
-    height: 4px;
-    background-color:#3270fc ;
+.Info1 {
+  width: 35px;
+  height: 4px;
+  background-color: #3270fc;
 }
-.Info2{
-    padding-left: 20px;
-    font-weight: 400;
-    padding-left:15px ;
+.Info2 {
+  padding-left: 20px;
+  font-weight: 400;
+  padding-left: 15px;
 }
-.Info3{
-    padding-left: 20px;
-    font-weight: 400;
-    padding-left:15px ;
+.Info3 {
+  padding-left: 20px;
+  font-weight: 400;
+  padding-left: 15px;
+}
+.Main:hover {
+  transform: scale(1.05);
 }
