added About page

--- a/FrontEnd/echooling/src/Pages/Events/Events.module.css
+++ b/FrontEnd/echooling/src/Pages/Events/Events.module.css
@@ -23,7 +23,7 @@
   color: #3270fc;
 }
 .Poster {
-  background-image: url("../Images/basketball.jpeg");
+  background-image: url("../../Images/basketball.jpeg");
   background-position: center;
   background-size: 120%;
   background-repeat: no-repeat;
