--- a/FrontEnd/echooling/src/Pages/About/about.module.css
+++ b/FrontEnd/echooling/src/Pages/About/about.module.css
@@ -63,15 +63,21 @@
     right: calc(30vw); /* Adjust the multiplier as needed */
   }
 }
-.CounterContainer{
-    justify-items: center;
+.Header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.Header{
-    display: flex;
-    flex-direction: column;
-align-items: center;
+.Header h1 {
+  font-size: 30px;
+  font-weight: 500;
+  padding: 20px 0;
 }
-.Header h1{
-    font-size: 30px;
-    padding: 20px 0;
+.TeacherContainer{
+    justify-content: center;
+    padding: 80px 0;
+}
+.teachers{
+  position: relative;
+
 }
