--- a/FrontEnd/echooling/src/Components/ContactUs/Contactus.module.css
+++ b/FrontEnd/echooling/src/Components/ContactUs/Contactus.module.css
@@ -1,18 +1,87 @@
-.mainContainer{
-    border: 1px solid black;
-    width: 100%;
-    height: max-content;
+.mainContainer {
+  width: 100%;
+  height: max-content;
+  background: linear-gradient( 260.95deg, #F2F4F4 0, rgba(3, 62, 212, 0.238) 115.81% ) !important;
 }
-.left{
-    border: 1px solid black;
-    width: 100%;
-    height: 100%;
+
+.right {
+  width: 100%;
+  height: 100%;
+  padding: 45px;
+  background: linear-gradient(
+    130.95deg,
+    #f2f4f9 0,
+    rgba(242, 244, 249, 0.164) 60.81%
+  );
 }
-.right{
-    border: 1px solid black;
-    width: 100%;
-    height: 100%;
-    padding: 35px;
-    background: linear-gradient(138.95deg,#f2f4f9 0,rgba(242,244,249,0) 63.81%);
-    border-radius: 10px;
+.Input {
+  margin: 20px;
+  border-color: rgba(0, 0, 0, 0.432) !important;
+}
+.Input::placeholder {
+  color: rgba(0, 0, 0, 0.877) !important;
+}
+.GridContainer {
+  margin-bottom: 20px;
+}
+.formTitleContainer {
+  margin: 20px;
+}
+.Button {
+  border-radius: 0;
+  background-color: transparent !;
+  border: 1px solid #3270fc;
+  text-transform: uppercase ;
+  color: #3270fc !important;
+}
+.Button:hover {
+  color: white !important;
+  background-color: #3270fc !important;
+}
+.formTitleContainer h1 {
+  color: #3270fc;
+  font-size: 40px;
+}
+.formTitleContainer h2 {
+  font-size: 20px;
+  color: #131550;
+  font-weight: 500;
+}
+.left {
+  width: 100%;
+  height: 100%;
+  padding: 45px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background: linear-gradient( 260.95deg, #F2F4F4 0, rgba(3, 62, 212, 0.238) 115.81% ) !important;
+}
+.left li{
+    list-style: none;
+    padding: 20px 0;
+}
+.left h1{
+    font-size: 20px;
+    color: #131550;
+    font-weight: 500;
+}
+.leftList{
+display: flex;
+gap: 20px;
+}
+.leftList img{
+    width: 100px;
+    }
+.left h2{
+    color: black;
+    font-weight: 400;
+    max-width: 269px;
+}
+@media (max-width:480px) {
+    .right {
+        width: 380px;
+    }
+    .left{
+        width: 380px;
+    }
 }
