--- a/FrontEnd/echooling/src/Components/poster/poster.module.css
+++ b/FrontEnd/echooling/src/Components/poster/poster.module.css
@@ -16,8 +16,13 @@
   padding: 160px 20px 20px 20px !important;
   text-transform: uppercase;
 }
-@media (max-width: 1180px) {
-  .Poster {
-    display: none;
+@media (max-width: 1280px) {
+  .Poster{
+    width: 100%;
+    height: 100%;
+  }
+  .Poster h1 {
+    padding: 10px ;
+    padding: 160px 10px 10px 10px !important;
   }
 }
