--- a/FrontEnd/echooling/src/Pages/Eventdetail/EventDetail.module.css
+++ b/FrontEnd/echooling/src/Pages/Eventdetail/EventDetail.module.css
@@ -122,6 +122,9 @@
   font-weight: 500;
   color: black;
 }
+.AtendaceGrid{
+    justify-items: center;
+}
 @media (max-width: 1250px) {
     .left >div {
       width: 100%;
