--- a/FrontEnd/echooling/src/Pages/Eventdetail/EventDetail.module.css
+++ b/FrontEnd/echooling/src/Pages/Eventdetail/EventDetail.module.css
@@ -84,17 +84,15 @@
 .LastestEvents {
   margin: 20px 0;
 }
-.MainContainer {
-  padding-top: 80px;
-}
 .GridItem {
   width: max-content;
 }
 .right {
- width: 100%;
+  width: 100%;
 }
 .left {
   max-width: max-content;
+  padding: 20px 0;
 }
 .EventImage {
   width: 100%;
@@ -107,10 +105,11 @@
 .GridContainer {
   max-width: fit-content;
   margin: auto;
+  padding-top: 40px;
 }
-.AtendanceList h1 {
-  padding: 30px 0;
-  font-size: 20px;
+.AtendanceHeader {
+  padding: 20px 0;
+  font-size: 30px;
   text-transform: uppercase;
   font-weight: 500;
   color: black;
@@ -122,30 +121,30 @@
   font-weight: 500;
   color: black;
 }
-.AtendaceGrid{
-    justify-items: center;
+.AtendaceGrid {
+  justify-items: center;
 }
 @media (max-width: 480px) {
-    .EventImage{
-        height: 320px !important;
-        margin: auto;
-    }
+  .EventImage {
+    height: 320px !important;
+    margin: auto;
+  }
 }
 @media (max-width: 1250px) {
-    .left >div {
-      width: 100%;
-      height: 320px ;
-      padding: 18px;
-      margin: 0;
-    }
-    .left{
-      gap: 50px;
-      align-items: center;
-      justify-content: center;
-      margin: auto;
-      padding: 20px;
-    }
-    .LastestEvents h1{
-      padding: 10px;
-    }
+  .left > div {
+    width: 100%;
+    height: 320px;
+    padding: 18px;
+    margin: 0;
   }
+  .left {
+    gap: 50px;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    padding: 20px;
+  }
+  .LastestEvents h1 {
+    padding: 10px;
+  }
+}
