--- a/FrontEnd/echooling/src/Pages/Register/Register.module.css
+++ b/FrontEnd/echooling/src/Pages/Register/Register.module.css
@@ -9,17 +9,61 @@
     position: absolute !important;
     margin-top: -100px;
     background: hsla(0, 0%, 100%, 0.8);
-    backdrop-filter: blur(8px);
     border-radius:10px;
     box-shadow: rgba(0, 0, 0, 0.76) 0px 5px 15px;
     width: 50%;
     min-height: 200px;
+    transition: all linear 300ms;
+    backdrop-filter: blur(15px);
+}
+@media (max-width:1200px) {
+    .Main{
+        backdrop-filter: none; /* Disable backdrop filter on mobile */
+        background: hsla(0, 10%, 100%, 0.9); 
+        min-width: 489px;
+    }
+    .Input{
+        padding: 0 !important;
+        margin-top: -100px;
+    }
+    .MainContainer{
+        padding: 0 !important;
+    }
+    .MainContainer h1{
+        margin-top: 60px;
+        top: -190px;
+        color: white !important;
+        position: relative;
+    }
+    .BackgrounImage{
+        height: 490px;
+    }
+}
+@media (max-width:480px) {
+    .Main{
+        min-width: 389px;
+    }
+    .Input{
+        padding: 0 !important;
+        margin-top: -100px;
+    }
+    .MainContainer{
+        padding: 0 !important;
+    }
+    .MainContainer h1{
+        margin-top: 60px;
+        top: -190px;
+        color: white !important;
+        position: relative;
+    }
+    .BackgrounImage{
+        height: 490px;
+    }
 }
 .MainContainer{
     text-align: center ;
-    padding: 3rem;
     position: relative;
-    margin-bottom: 200px;
+    margin-bottom: 300px;
 }
 .Input{
     padding:20px 100px ;
