--- a/FrontEnd/echooling/src/Pages/Register/Register.module.css
+++ b/FrontEnd/echooling/src/Pages/Register/Register.module.css
@@ -5,6 +5,10 @@
   height: 400px;
   top: 50%;
 }
+.Alert{
+  position: absolute;
+  top:  200px;
+}
 .Main {
   position: absolute !important;
   margin-top: -100px;
