--- a/FrontEnd/echooling/src/Components/Counter/Counter.module.css
+++ b/FrontEnd/echooling/src/Components/Counter/Counter.module.css
@@ -4,6 +4,8 @@
     flex-direction: column;
     align-items: start;
     padding: 5px;
+    align-items: center;
+    justify-content: center;
 }
 .Container > div :not(h1){
     font-size: 39px;
@@ -16,6 +18,11 @@
     transform: scaleY(0.7);
     transform: scaleX(1.1);
 }
+.text{
+    text-align: center;
+    width: 150px;
+    height: 80px;
+}
 .Container h1{
     margin: 0;
     font-size: 15px;
@@ -23,4 +30,7 @@
     color: #5B5F64;
     font-weight: 500;
     text-transform: uppercase;
+}
+.counter{
+    margin: auto;
 }
