--- a/FrontEnd/echooling/src/Pages/Eventdetail/EventDetail.module.css
+++ b/FrontEnd/echooling/src/Pages/Eventdetail/EventDetail.module.css
@@ -1,75 +1,90 @@
 .MainInfoContainer p {
   padding-left: 10px;
 }
+
 .Icon {
   padding: 7px;
 }
+
 .MainInfoContainer {
   max-width: 300px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   padding: 20px;
   transition: all linear 300ms;
 }
+
 .Button {
   color: white !important;
   background-color: #3270fc !important;
   width: 100%;
   margin-top: 35px;
 }
+
 .Button:hover {
   color: #3270fc !important;
   background-color: white !important;
   border: #3270fc 1px solid;
 }
+
 .Button:hover .arrow {
   margin-left: 5px;
   color: #3270fc;
 }
+
 .arrow {
   padding: 5px;
 }
+
 .MainInfoContainer h3 {
   color: #3270fc;
   font-size: 25px;
   font-weight: 600;
 }
+
 .MainInfoContainer h4 {
   font-size: 15px;
   font-weight: 400;
   color: #5b5f64;
 }
+
 .MainInfoContainer h5 {
   font-size: 17px;
   font-weight: 500;
   color: #5b5f64;
 }
+
 .share {
   padding-top: 10px;
 }
+
 .DetatilsContainer {
-  max-width: 300px;
+  max-width: 310px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  padding: 20px;
+  padding: 14px;
   transition: all linear 300ms;
   margin-top: 20px;
 }
+
 .DetatilsContainer h1 {
   font-size: 16px;
   font-weight: 500;
   color: black;
   padding-top: 7.5px;
 }
+
 .DetatilsContainer p {
   font-size: 15px;
   font-weight: 400;
   color: #5b5f64;
   padding-bottom: 7.5px;
 }
+
 .LastestEvents {
   max-width: 300px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   padding: 20px;
 }
+
 .LastestEvents h1 {
   padding: 20px 0;
   font-size: 20px;
@@ -77,36 +92,46 @@
   font-weight: 500;
   color: black;
 }
+
 .Contentitem1 {
   flex-direction: column;
   gap: 20px;
 }
+
 .LastestEvents {
   margin: 20px 0;
 }
+
 .GridItem {
   width: max-content;
 }
+
 .right {
   width: 100%;
 }
+
 .left {
   max-width: max-content;
   padding: 20px 0;
 }
+
 .EventImage {
   width: 100%;
+  object-fit: cover;
   height: 450px;
 }
+
 .ImageConatainer {
   padding: 20px;
   width: 100%;
 }
+
 .GridContainer {
   max-width: fit-content;
   margin: auto;
   padding-top: 40px;
 }
+
 .AtendanceHeader {
   padding: 20px 0;
   font-size: 30px;
@@ -114,6 +139,7 @@
   font-weight: 500;
   color: black;
 }
+
 .EventTitle {
   padding: 20px 0;
   font-size: 30px;
@@ -121,22 +147,26 @@
   font-weight: 500;
   color: black;
 }
+
 .AtendaceGrid {
   justify-items: center;
 }
+
 @media (max-width: 480px) {
   .EventImage {
     height: 320px !important;
     margin: auto;
   }
 }
+
 @media (max-width: 1250px) {
-  .left > div {
+  .left>div {
     width: 100%;
     height: 320px;
     padding: 18px;
     margin: 0;
   }
+
   .left {
     gap: 50px;
     align-items: center;
@@ -144,6 +174,7 @@
     margin: auto;
     padding: 20px;
   }
+
   .LastestEvents h1 {
     padding: 10px;
   }
