--- a/FrontEnd/echooling/src/Pages/Events/Events.module.css
+++ b/FrontEnd/echooling/src/Pages/Events/Events.module.css
@@ -1,27 +1,39 @@
 .MainContent {
-  padding: 80px 40px;
+  padding: 60px 40px;
   display: flex;
 }
+
 .GridBoxMain {
   justify-items: center;
   margin: auto;
 }
+
 .SeachArea {
   max-width: max-content;
   padding: 20px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   border-radius: 3px;
 }
+
 .SeachArea input {
   margin: 5px 0;
 }
+
 .Input {
   width: 250px;
 }
+
 .titleSeach {
   font-size: 25px;
   color: #3270fc;
 }
+
+.notFounds h1 {
+  width: 300px;
+  text-align: CENTER;
+  font-weight: 600 !important;
+}
+
 .Poster {
   background-image: url("../../Images/basketball.jpeg");
   background-position: center;
@@ -40,6 +52,7 @@
   padding: 160px 20px 20px 20px;
   text-transform: uppercase;
 }
+
 .list h1 {
   font-size: 20px;
   color: #303030;
@@ -48,6 +61,7 @@
   margin-bottom: 35px;
   line-height: 26px;
 }
+
 .list ul li {
   font-size: 16px;
   font-family: "Open Sans", sans-serif;
@@ -57,69 +71,78 @@
   transition: all 0.5s ease 0s;
   padding: 10px 0px;
 }
+
 .list {
   max-width: 290px;
   padding: 20px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   border-radius: 3px;
 }
+
 .Rightside {
   display: flex;
   flex-direction: column;
   gap: 50px;
 }
+
 .GridItemMain {
   width: max-content;
 }
+
 .TopSideContainer {
   display: none;
 }
+
 @media (max-width: 1180px) {
   .Rightside {
-    display: none;
-  }
-  .TopSideContainer {
-    display: flex;
-  }
-  .TopSide {
     display: flex;
     flex-direction: row;
     gap: 20px;
   }
+
+  .MainGridItem {
+    margin: auto;
+  }
+
   .list {
     width: 390px;
     padding: 20px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     border-radius: 3px;
   }
+
   .Poster {
     display: none;
   }
 }
+
 @media (max-width: 480px) {
-    .MainContent {
-        padding: 0px 20px;
-        display: flex;
-      }
-    .Rightside {
-      display: none;
-    }
-    .TopSideContainer {
-      display: flex;
-    }
-    .TopSide {
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-    }
-    .list {
-      width: 390px;
-      padding: 20px;
-      box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-      border-radius: 3px;
-    }
-    .Poster {
-      display: none;
-    }
+  .Rightside {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-bottom: 20px;
+    margin: none;
   }
-  
+
+  .MainGridItem {}
+
+  .MainContent {
+    padding: 0 !important;
+    display: flex;
+    flex-direction: reverse;
+  }
+
+  .TopSide {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .list {
+    width: 390px;
+    padding: 20px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    border-radius: 3px;
+  }
+}
