--- a/FrontEnd/echooling/src/Pages/Eventdetail/EventDetail.module.css
+++ b/FrontEnd/echooling/src/Pages/Eventdetail/EventDetail.module.css
@@ -119,8 +119,11 @@
   width: 100%;
   object-fit: cover;
   height: 450px;
+  width: 800px;
 }
-
+.EventImage img{
+  width: 100%;
+}
 .ImageConatainer {
   padding: 20px;
   width: 100%;
@@ -156,6 +159,7 @@
   .EventImage {
     height: 320px !important;
     margin: auto;
+    width: 320px;
   }
 }
 
